# proof-at-home

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.pocketbase  Dockerfile.pocketbase.dockerignore  Makefile  README.md  docker-compose.yml  fly.toml  go.mod  go.sum
src/client/: Cargo.toml
src/client/docs/schemas/: ai-comparison.schema.json  nft-review-output.schema.json  nft-session-output.schema.json  problem.schema.json  proof-result.schema.json  review-nft-metadata.schema.json  review-report.schema.json  review-session.schema.json  review-summary.schema.json  session-nft-metadata.schema.json  session-summary.schema.json
src/client/src/: ipfs.rs  lib.rs  main.rs  signing.rs
src/client/src/agent/: memory.rs  mod.rs  orchestrator.rs  pipeline.rs
src/client/src/ai/: anthropic.rs  mock.rs  mod.rs  ollama.rs  openai.rs  types.rs
src/client/src/archive/: pack.rs
src/client/src/budget/: mod.rs  tracker.rs
src/client/src/certifier/: comparison.rs  templates.rs  types.rs
src/client/src/commands/: agent.rs  auth.rs  certificate.rs  certify.rs  conjecture.rs  contribution.rs  donate.rs  exposition.rs  init.rs  lesson.rs  login.rs  mod.rs  pool.rs  proof.rs  provider.rs  publish.rs  review.rs  run.rs  series.rs  setting.rs  setup.rs  status.rs  strategy.rs  submit_conjecture.rs  submit_package.rs  tools.rs
src/client/src/commands_store/: frontmatter.rs  importer.rs  (+2 more)
src/client/tests/: agent.rs  ai_provider.rs  conjecture_export.rs  edition.rs  exposition.rs  lesson_notes.rs  pool_commands.rs  proof_parse.rs  proof_submit.rs  series.rs  strategy_registry.rs
(+332 files in other folders)
