[package]
name = "proof-at-home"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "proof-at-home"
path = "src/main.rs"

[[bin]]
name = "gen-schemas"
path = "src/bin/gen-schemas.rs"

[dependencies]
clap       = { version = "4", features = ["derive"] }
tokio      = { version = "1", features = ["full"] }
reqwest    = { version = "0.12", features = ["json", "multipart"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml       = "0.8"
dirs       = "5"
tar        = "0.4"
flate2     = "1"
sha2       = "0.10"
hex        = "0.4"
dialoguer  = "0.11"
indicatif  = "0.17"
chrono     = { version = "0.4", features = ["serde"] }
anyhow     = "1"
uuid       = { version = "1", features = ["v4"] }
colored    = "2"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand       = "0.8"
schemars   = { version = "0.8", features = ["chrono"] }
